started UI, lot of improvements
