# jackdaw/nest/api/graph.py
@@ -1,6 +1,6 @@
 # System modules
 from datetime import datetime
-from jackdaw.nest.graph.domain import DomainGraph
+from jackdaw.nest.graph.domain import DomainGraph, GraphData
 
 # 3rd party modules
 from flask import make_response, abort, current_app
@@ -24,31 +24,58 @@ def delete(graphid):
 
 def get(graphid):
     if graphid not in graphs:
-        return {}
+        return 'Graph Not Found', 404
     res = graphs[graphid].all_shortest_paths()
     return res.to_dict()
 
-def query_path(graphid, src = None, dst = None):
+def query_path(graphid, src = None, dst = None, format = 'd3'):
     if graphid not in graphs:
-        return {}
+        return 'Graph Not Found', 404
     if src is None and dst is None:
         return {}
     res =  graphs[graphid].all_shortest_paths(src, dst)
-    return res.to_dict(format = 'd3')
+    return res.to_dict(format = format)
+
+def query_path_da(graphid, format = 'vis'):
+    if graphid not in graphs:
+        return 'Graph Not Found', 404
+    
+    da_sids = {}
+    #searching for domain admin SID
+    for node in graphs[graphid].get_node():
+        if node.id.endswith('-512'):
+            da_sids[node.id] = 1
+    
+    #print(da_sids)
+    if len(da_sids) == 0:
+        return 'Graph Not Found', 404
+    
+    res = GraphData()
+    for sid in da_sids:
+        res += graphs[graphid].all_shortest_paths(None, sid)
+
+
+    #print(res)
+    return res.to_dict(format = format)
+
 
 def list_nodes(graphid, with_data = False):
     if graphid not in graphs:
-        return {}
-    return graphs[graphid].get_node()
+        return 'Graph Not Found', 404
+    nodes = []
+    for node in graphs[graphid].get_node():
+        nodes.append(node.to_dict())
+    print(nodes)
+    return nodes
 
 def get_node(graphid, nodeid):
     if graphid not in graphs:
-        return {}
+        return 'Graph Not Found', 404
     return graphs[graphid].get_node(nodeid)
 
 def query_path_all(graphid):
     if graphid not in graphs:
-        return {}
+        return 'Graph Not Found', 404
     return graphs[graphid].show_all().to_dict(format = 'd3')
 
 def search_sid(graphid, sid):
@@ -59,7 +86,7 @@ def search_cn(graphid, cn):
 
 def stat_distance(graphid, sid):
     if graphid not in graphs:
-        return {}
+        return 'Graph Not Found', 404
     distances = graphs[graphid].distances_from_node(sid)
     
     return distances
