# jackdaw/nest/api/server.py
@@ -2,12 +2,32 @@
 from flask import send_file, send_from_directory
 
 def serve_file(filename):
-    response = send_from_directory('static', filename)
+    print(filename)
+    response = send_from_directory('site', filename)
+    response.direct_passthrough = False
+    return response
+
+def serve_favico():
+    response = send_from_directory('site/static/img', 'favicon.ico')
+    response.direct_passthrough = False
+    return response
+
+def serve_js(filename):
+    response = send_from_directory('site/static/js', filename)
+    response.direct_passthrough = False
+    return response
+
+def serve_css(filename):
+    response = send_from_directory('site/static/css', filename)
+    response.direct_passthrough = False
+    return response
+
+def serve_img(filename):
+    response = send_from_directory('site/static/img', filename)
     response.direct_passthrough = False
     return response
 
 def serve_home():
-    filename = 'test.html'
-    response = send_from_directory('static', filename)
+    response = send_from_directory('site/templates', 'index.html')
     response.direct_passthrough = False
     return response
