# jackdaw/nest/api/swagger.yaml
@@ -12,6 +12,18 @@ basePath: /
 
 # Paths supported by the server application
 paths:
+  /favicon.ico:
+    get:
+      tags:
+        - Server
+      operationId: jackdaw.nest.api.server.serve_favico
+      summary: Serves the favico
+      description: Serves the favico        
+      produces:
+        - text/html   
+      responses:
+        200:
+          description: Successfully loaded html page.
   /nest:
     get:
       tags:
@@ -30,6 +42,63 @@ paths:
       tags:
         - Server
       operationId: jackdaw.nest.api.server.serve_file
+      summary: Serves the html files
+      description: Serves the html files
+      parameters:
+        - name: filename
+          in: path
+          description: file path to download
+          required: True
+          type: string
+      produces:
+        - text/html
+      responses:
+        200:
+          description: Successfully loaded html page.
+
+  /nest/static/js/{filename}:
+    get:
+      tags:
+        - Server
+      operationId: jackdaw.nest.api.server.serve_js
+      summary: Serves the html files
+      description: Serves the html files
+      parameters:
+        - name: filename
+          in: path
+          description: file path to download
+          required: True
+          type: string
+      produces:
+        - text/html
+      responses:
+        200:
+          description: Successfully loaded html page.
+
+  /nest/static/css/{filename}:
+    get:
+      tags:
+        - Server
+      operationId: jackdaw.nest.api.server.serve_css
+      summary: Serves the html files
+      description: Serves the html files
+      parameters:
+        - name: filename
+          in: path
+          description: file path to download
+          required: True
+          type: string
+      produces:
+        - text/html
+      responses:
+        200:
+          description: Successfully loaded html page.
+
+  /nest/static/img/{filename}:
+    get:
+      tags:
+        - Server
+      operationId: jackdaw.nest.api.server.serve_img
       summary: Serves the html files
       description: Serves the html files
       parameters:
@@ -116,6 +185,11 @@ paths:
           description: destination object SID
           type: string
           required: False
+        - name: format
+          in: query
+          description: return format. either vis or d3
+          type: string
+          required: False
       responses:
         200:
           description: Returns the graph data with all the shortest paths between the two SIDs
@@ -139,9 +213,42 @@ paths:
           description: ID of the graph view
           type: integer
           required: True
+        - name: format
+          in: query
+          description: return format. either vis or d3
+          type: string
+          required: False
       responses:
         200:
           description: Returns graph view data with all the nodes and edges
+          schema:
+            type: object
+            properties:
+              graph:
+                type: string
+                description: Placeholder TODO
+  
+  /graph/{graphid}/query/path/da/:
+    get:
+      operationId: jackdaw.nest.api.graph.query_path_da
+      tags:
+        - Graph
+      summary: All paths to domain admins group
+      description: All paths to domain admins group
+      parameters:
+        - name: graphid
+          in: path
+          description: ID of the graph view
+          type: integer
+          required: True
+        - name: format
+          in: query
+          description: return format. either vis or d3
+          type: string
+          required: False
+      responses:
+        200:
+          description: All paths to domain admins group
           schema:
             type: object
             properties:
